<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light"
    tools:context=".DisclaimerFragment">


    <TextView
        android:id="@+id/question1"
        android:layout_width="337dp"
        android:layout_height="24dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/question1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/purple_700"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/answer2"
        android:layout_width="340dp"
        android:layout_height="145dp"
        android:fontFamily="@font/average_sans"
        android:text="@string/answer2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/purple_700"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question2" />

    <TextView
        android:id="@+id/question2"
        android:layout_width="336dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/question2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/purple_700"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer1" />

    <TextView
        android:id="@+id/answer1"
        android:layout_width="336dp"
        android:layout_height="125dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/average_sans"
        android:text="@string/answer1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/purple_700"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question1" />

    <TextView
        android:id="@+id/question3"
        android:layout_width="340dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/question3"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/purple_700"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer2" />

    <TextView
        android:id="@+id/answer3"
        android:layout_width="341dp"
        android:layout_height="97dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/average_sans"
        android:text="@string/answer3"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/purple_700"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question3" />

    <TextView
        android:id="@+id/question4"
        android:layout_width="340dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/question4"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/purple_700"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer3" />

    <TextView
        android:id="@+id/answer4"
        android:layout_width="340dp"
        android:layout_height="30dp"
        android:fontFamily="@font/average_sans"
        android:text="@string/answer4"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/purple_700"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question4" />

    <Button
        android:id="@+id/agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I understand"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer4"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="121dp"
        android:layout_height="280dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:alpha=".2"
        android:src="@drawable/flower1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="124dp"
        android:layout_height="352dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="4dp"
        android:alpha=".4"
        android:src="@drawable/flower4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="68dp"
        android:layout_height="194dp"
        android:layout_marginBottom="36dp"
        android:alpha=".3"
        android:src="@drawable/flower2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="@+id/agree" />
</androidx.constraintlayout.widget.ConstraintLayout>